# WidevineProxy2

./: .gitignore  AGENTS.md  README.md  background.js  cmac.js  content_script.js  device.js  forge.min.js  install-macos-native-host.sh  install-windows-native-host.cmd  install-windows-native-host.ps1  license.js  license_protocol.js  manifest.json  message_proxy.js  offscreen.html  offscreen.js  remote.json  remote_cdm.js  supported_sites.js  util.js
data/: yt_dlp_supported_hosts.json
docs/: dev-build.md  download-strategy-architecture.md  implementation-checklist.md  native-host-install.md  native-messaging-design.md  release-notes.md  work-notes.md
docs/architecture/: extension-architecture.md  native-pipeline.md
docs/changelog/: changelog.md
docs/development/: build-and-release.md
docs/getting-started/: install-macos.md  install-windows.md  overview.md
native-host/: Cargo.toml  com.widevineproxy2.downloader.json  install.ps1  install.sh  uninstall.ps1  uninstall.sh
native-host/benches/: cancellation.rs
native-host/src/: main.rs
native-host/src/d_anime_notes/: README.md
overlay/: overlay.css  overlay.js
panel/: panel.css  panel.html  panel.js
picker/: filePicker.html  filePicker.js
picker/remote/: filePicker.html  filePicker.js
picker/wvd/: filePicker.html  (+1 more)
scripts/: build-native-host.ps1  build-native-host.sh  package-release.sh  update_supported_sites.py
strategies/: base.js  dash_clearkey.js  dash_widevine.js  generic_ytdlp.js  hls_clear.js  hls_fairplay.js  hls_widevine.js  live_hls.js  progressive.js  registry.js  smooth_streaming.js
