[package]
name = "native-host"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "widevineproxy2-host"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"
uuid = { version = "1.10", features = ["v4"] }
crossbeam-channel = "0.5"
regex = "1.11"
shared_child = "1.0"

[dev-dependencies]
cancel-safe-futures = "0.1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
